# airline-booking

./: README.md
airline-frontend/: package-lock.json  package.json
airline-frontend/src/: App.js
airline-frontend/src/components/: NavegationBar.jsx
airline-frontend/src/components/catalog/: FlightList.jsx  FlightSearch.jsx  SearchCard.jsx  SearchResult.jsx
backend/: Dockerfile  docker-compose.yml  requirements.txt
backend/app/: =3.0.0  README.md  main.py  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0740f6c12d09_create_initial_tables.py  45557ab35630_.py
backend/app/app/: prestart.sh
backend/app/app/auth/: router.py  schema.py
backend/app/app/booking/: models.py  router.py  schema.py  services.py
backend/app/app/catalog/: models.py  router.py  services.py
backend/app/app/catalogue/: models.py  router.py  schema.py  services.py
backend/app/app/core/: config.py  hashing.py  security.py
backend/app/app/database/: base_class.py  db.py  models.py  session.py
backend/app/app/flight/: models.py
backend/app/app/user/: models.py  router.py  schema.py  services.py
