[tool.poetry]
name = "flapp-app"
version = "0.1.0"
description = ""
authors = ["Dramm-bit <davidmendozamejia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
fastapi = "^0.75.2"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.35"
alembic = "^1.7.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
